- Fixed bug: Flicker on scroll in Safari #4522

--- a/src/css/fullpage.css
+++ b/src/css/fullpage.css
@@ -24,6 +24,10 @@ html.fp-enabled,
     box-sizing: border-box;
     height: 100%;
     display: block;
+
+    /* Avoid flicker in Safari #4522 */
+    transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
 }
 .fp-slide {
     float: left;
